<resources>
    <string name="app_name">Evolvo</string>
    <string name="email_edit"><font size="16">Email</font></string>
    <string name="passw_edit"><font size="16">Password</font></string>
    <string name="passw_forgot">Hai dimenticato la password?</string>
    <string name="no_account">Non hai un account?</string>
    <string name="sing_up">Registrati</string>
    <string name="get_start">Inizia!</string>
    <string name="beauty_treatment">Trattamenti di bellezza</string>
    <string name="sport_treatment">Trattamenti per gli sportivi</string>
    <string name="fisio_treatment">Trattamenti fisioterapici</string>
    <string name="welcome">Bentornato su </string>
    <string name="login_with">Per poter accedere loggati con il tuo account BastoniLab!</string>
    <string name="search">Cerca</string>

    <string name="beauty_menu">Beauty</string>
    <string name="sport_menu">Sport</string>
    <string name="fisio_menu">Healthcare</string>
    <string name="favourites_menu">Favourites</string>
    <string name="search_menu">Search</string>
    <string name="shop_menu">Shop</string>
    <string name="home_menu">Home</string>
</resources>
