<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:src="@drawable/favicon"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginEnd="6dp"
                    android:textColor="@color/text"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:text="@string/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:fontFamily="sans-serif-medium"/>
            <TextView
                    android:textColor="@color/text"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:fontFamily="sans-serif-medium"/>
            <TextView
                    android:textColor="@color/text"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:text="!"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:fontFamily="sans-serif-medium"/>
        </LinearLayout>
        <TextView
                android:layout_gravity="center"
                android:text="@string/login_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_margin="50dp"
                android:layout_gravity="center" android:layout_width="wrap_content"
                      android:orientation="vertical" android:layout_height="wrap_content">
        <EditText
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:background="@drawable/background_search"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:hint="@string/email_edit"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:background="@drawable/background_search"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:hint="@string/passw_edit"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:textStyle="bold"
                android:textColor="@color/myPrimaryColor"
                android:layout_gravity="end"
                android:text="@string/passw_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
       <Button
               android:id="@+id/btn_login"
               android:textColor="#ffffff"
               android:textAllCaps="false"
               android:text="Login"
               android:stateListAnimator="@null"
               android:elevation="4dp"
               android:background="@drawable/background_rounded_login"
               android:layout_gravity="center"
               android:layout_width="200dp"
               android:layout_height="50dp"/>
        <LinearLayout
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginLeft="6dp"
                    android:textStyle="bold"
                    android:text="@string/sing_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>